--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,3 +1,11 @@
 [GameplayTagWidget]
 Team TagTeam.Expanded=True
+Actor Tag ContainerTeam.Expanded=True
+Actor Tag ContainerTeam.BlueTeam.Expanded=True
+Team TagTeam.BlueTeam.Expanded=True
+SGameplayTagGraphPinTeam.Expanded=True
+Key (Gameplay Tag)Team.Expanded=True
+0Team.Expanded=True
+1Team.Expanded=True
+2Team.Expanded=True
 
