--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -8,4 +8,5 @@ Key (Gameplay Tag)Team.Expanded=True
 0Team.Expanded=True
 1Team.Expanded=True
 2Team.Expanded=True
+SGameplayTagGraphPinTeam.BlueTeam.Expanded=True
 
