--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -9,4 +9,5 @@ Key (Gameplay Tag)Team.Expanded=True
 1Team.Expanded=True
 2Team.Expanded=True
 SGameplayTagGraphPinTeam.BlueTeam.Expanded=True
+Team TagTeam.YellowTeam.Expanded=True
 
