--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -10,4 +10,5 @@ Key (Gameplay Tag)Team.Expanded=True
 2Team.Expanded=True
 SGameplayTagGraphPinTeam.BlueTeam.Expanded=True
 Team TagTeam.YellowTeam.Expanded=True
+SGameplayTagGraphPinTeam.RedTeam.Expanded=True
 
